crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__operator__not_equals.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/not_equals.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (!= nil nil))
   (print (!= true true))
   (print (!= true false))
   (print (!= 1.0 1.0))
   (print (!= 1.0 2.0))
   (print (!= str str))
   (print (!= str ing))
   (print (!= nil false))
   (print (!= false 0.0))
   (print (!= 0.0 0)))

----- stderr -----
